# Telegram-Bot

./: .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml
app/: constants.py  init_app.py  routers.py
app/apis/: customer_api.py  osp_api.py  quests_api.py
app/config/: config.yaml  config_demo.yaml  setting.py
app/controller/: bot_controller.py  health_check_controller.py  tele_controller.py
app/core/: bot.py  bot_handler.py  context_manager.py  error_handler.py  grpc_error_decorator.py  initialize_bots.py  logger_handler.py  osp_api.py  osp_apis_handler.py  osp_response_handler.py  osp_response_management.py  redis_handler.py  request_handler.py  security.py  telegram_message.py  verify_header.py
app/handler/: base.py  chat.py
app/init/: init_app.py  init_grpc.py
app/items/: app_item.py  bot_item.py  customer_item.py  osp_item.py  quests_item.py  response_item.py  telegram_item.py  ufool_item.py
app/routers/: app_routers.py  grpc_routers.py
app/services/: bot_service.py  chat_grpc_service.py  verify_group_link_grpc_service.py
app/static/: osp.py  static.py  ufool.py
app/utils/: enum_util.py  object_util.py  time_util.py
config/: setting.py
exchange-facade/: base.proto  chat.proto  verify_group_link.proto
facade/: base_pb2.py  base_pb2_grpc.py  chat_pb2.py  chat_pb2_grpc.py  verify_group_link_pb2.py  verify_group_link_pb2_grpc.py
static/: config_demo.yaml
utils/: log.py  pulse_error.py
